@@ -1,6 +1,6 @@
-:stack-version: 6.5.3
+:stack-version: 6.5.4
 :doc-branch: 6.5
-:go-version: 1.10.3
+:go-version: 1.10.6
 :release-state: released
 :python: 2.7.9
 :docker: 1.12
