@@ -1,4 +1,4 @@
-FROM golang:1.10.3
+FROM golang:1.10.6
 
 COPY test/main.go main.go
 
