@@ -1376,11 +1376,11 @@
 			"versionExact": "v1.5.0"
 		},
 		{
-			"checksumSHA1": "TmMTaJIWueXrKneUOKMOgq75fKE=",
+			"checksumSHA1": "4ZEyxKIsoeECu8pA7mK4mjiUvpw=",
 			"origin": "github.com/elastic/fsevents",
 			"path": "github.com/fsnotify/fsevents",
-			"revision": "4d5197691b054c220286f7c6ea167de9753d902d",
-			"revisionTime": "2018-05-02T14:11:16Z",
+			"revision": "e1d381a4d27063baac2e9d3c5887ceb4ab059287",
+			"revisionTime": "2018-10-29T22:35:31Z",
 			"tree": true
 		},
 		{
