@@ -33,11 +33,14 @@ https://github.com/elastic/beats/compare/v6.5.3...6.5[Check the HEAD diff]
 
 *Affecting all Beats*
 
+- Update Golang to 1.10.6. {pull}9563[9563]
+
 *Auditbeat*
 
 *Filebeat*
 
 - Fix saved objects in filebeat haproxy dashboard. {pull}9417[9417]
+- Fixed a memory leak when harvesters are closed. {pull}7820[7820]
 
 *Heartbeat*
 
